--- a/ByteBank.Agencias/ByteBank.Agencias.csproj
+++ b/ByteBank.Agencias/ByteBank.Agencias.csproj
@@ -76,7 +76,12 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
-    <Compile Include="ValidacaoTextBox.cs" />
+    <Compile Include="ValidacaoEventArgs.cs">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Compile>
+    <Compile Include="ValidacaoTextBox.cs">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Compile>
     <Page Include="EdicaoAgencia.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
